--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "leejss",
   "license": "ISC",
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "events": "^3.3.0",
     "typescript": "^4.9.5",
     "vitest": "^0.28.5"
